# Changelog
All notable changes to the VS Code Apex PMD will be documented in this file.

The format is based on [Keep a Changelog](https://keepachangelog.com/en/1.0.0/),
and this project adheres to [Semantic Versioning](https://semver.org/spec/v2.0.0.html).

## [0.3.2]
### Change
- Upgraded csv parsing package
- Improved recovery handling of bad csv data
- Ignore problems in .sfdx generated files
- Ability to enable PMD caching for a faster analysis


## [0.3.1]
### Change
- Upgrade package to fix security issues

## [0.3.0]
### Added
- New setting `apexPMD.rulesets`. This is a replacement for the deprecated `apexPMD.rulesetPath` setting. You can specify a list of rulesets you need to analyze your code against.
### Removed
- `apexPMD.rulesetPath` setting is now deprecated. It still works for backward compatibility but consider moving to a newer setting `apexPMD.rulesets`.
### Changed
- `apexPMD.pmdBinPath` description is updated to reduce confusion over this setting.